# models

./: .gitignore  pyproject.toml
research/object_detection/models/: ssd_mobilenet_v2_feature_extractor.py
research/object_detection/smart_spy/: generate_tfrecords.py  validate_dataset.py
research/object_detection/smart_spy/models/ssd_mobilenet_v1_coco/: model.ckpt-0.index  pipeline.config
